tests/NormalTests/paczka1/fuzzy1/78334744.err
Error in line 5: arPM S141 58,0
Error in line 9: 6hdGFWqeWt A709 1,4
Error in line 15: bGa5YWJcor S656 0,8
Error in line 16: sKf A709 1,7
Error in line 14: S656 S656 8,3
Error in line 23: bGa5YWJcor A709 35,2
Error in line 26: S656 A709 64,3
Error in line 27: bGa5YWJcor S141 73,2
Error in line 29: bGa5YWJcor S656 2,3
Error in line 34: bGa5YWJcor A709 90,4
